[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swesim"
version = "0.1.0"
description = "2D overland-flow ponding simulation driven by ICM overflow hydrographs."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "landlab>=2.6",
    "scipy>=1.11",
    "netcdf4>=1.6",
    "pyproj>=3.5",
]

[project.optional-dependencies]
gui = ["PyQt5>=5.15", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
